# control-translator

./: .env.example  .gitignore  README.md  pyproject.toml  review-temp.xlsx  review.xlsx
.github/: copilot-instructions.md
config/: nzism-3.9.yaml  nzism-azure copy.json  nzism-azure.json  sample-agentic.json  sample.json
data/catalogues/: nzism-3.9.oscal.json
data/mappings/: global-ignore.example.json  global-ignore.json
data/parameters/: nzism.example.json
data/source/: nzism-3.9.csv
data/templates/: seed-template.csv
docs/: future-work.md  process-guide.html
scripts/: inspect.py
src/control_translator/: __init__.py  cli.py  config.py  mcp_server.py  pipeline.py  seeds.py
src/control_translator/catalogue/: __init__.py  azure.py  base.py  offline.py
src/control_translator/distribute/: __init__.py  base.py  community_policy.py  gov_repo.py  local.py
src/control_translator/ingest/: __init__.py  base.py  fixture.py  nzism.py
src/control_translator/mapping/: __init__.py  _text.py  agentic.py  base.py  classifier.py  corrections.py  embedding.py  engine.py  keyword.py  retrieval.py  store.py
src/control_translator/models/: __init__.py  bundle.py  mapping.py  oscal.py
src/control_translator/review/: __init__.py  excel.py
src/control_translator/validate/: __init__.py  azure.py
tests/: test_agentic.py  test_build.py  test_catalogue_azure.py  test_classifier.py  test_ingest.py  test_smoke.py
tests/fixtures/: nzism_sample.csv  sample_builtins.json  sample_catalogue.json
