[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-translator"
version = "0.1.0"
description = "Agentic translation of published security standards into deployable cloud compliance controls"
requires-python = ">=3.10"
dependencies = []

# Optional, per-stage dependencies. The core skeleton runs on the standard library;
# these are only needed once the real (non-stub) plugins are wired up.
[project.optional-dependencies]
yaml           = ["pyyaml>=6"]
azure          = ["azure-identity>=1.16", "azure-mgmt-resource>=23"]
agentic        = ["anthropic>=0.39", "numpy>=1.26"]
openai         = ["openai>=1.50", "azure-identity>=1.16"]
azure-inference = ["azure-ai-inference>=1.0", "azure-identity>=1.16"]
dev            = ["pytest>=8"]

[project.scripts]
ct = "control_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
